# reason_action_agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml
.agent/skills/enterprise-search/: .skill-meta.json  SKILL.md  VERSION.md
.agent/skills/enterprise-search/references/: api_docs.md
.agent/skills/enterprise-search/scripts/: address_search.py  api_config.py  auth.py  ku_search.py  meeting_search.py  neisou_fetch.py  neisou_search.py  okr_fetch.py  okr_search.py  time_utils.py  weekly_report_fetch.py  weekly_report_search.py
reason_action_agent/: __init__.py  agent.py  cli.py  config.py  exceptions.py  input_manager.py  message_manager.py  model_clients.py  prompts.py  rich_display.py  session_exporter.py  session_logger.py  skill_manager.py  tag_parser.py  themes.py
reason_action_agent/tools/: __init__.py  file_tools.py  registry.py  skill_tools.py  system_tools.py  web_tools.py
