[project]
name = "reason-action-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "click>=8.4.1",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
]
